--- a/basic_stat_test_simulation.ipynb
+++ b/basic_stat_test_simulation.ipynb
@@ -402,7 +402,7 @@
     "    z_stat = (x_bar - population_mean) / (population_std_dev / np.sqrt(sample_size))\n",
     "    p_value = 2 * (1 - stats.norm.cdf(abs(z_stat)))\n",
     "    print(f\"Sample mean: {example_sample.mean():.4f}\")\n",
-    "    print(f\"t-statistic: {z_stat:.4f}\")\n",
+    "    print(f\"z-statistic: {z_stat:.4f}\")\n",
     "    print(f\"p-value: {p_value:.4f}\")\n",
     "    print(f\"Reject null hypothesis: {p_value < 0.05}\")\n",
     "    return results"
