update the find d parameter in ARIMA section with data simulation

--- a/time_series_data_forecast.ipynb
+++ b/time_series_data_forecast.ipynb
@@ -724,6 +724,57 @@
   },
   {
    "cell_type": "markdown",
+   "id": "f3b818fa-5830-445e-9361-37bc262b58ad",
+   "metadata": {},
+   "source": [
+    "### ARIMA data simulator"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ebe371df-8ea9-4b9d-ad42-9201e3f131e9",
+   "metadata": {},
+   "source": [
+    "We need a data simulator to generate data for testing our ARIMA-related functions and to ensure they work correctly."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 122,
+   "id": "e8ac5d32-a358-4ae3-9d56-9766d70255f5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# import the simulator\n",
+    "from arima_simulator import ARIMASimulator"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 123,
+   "id": "18470045-c23a-48bb-bb35-28520768d495",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Instantiate the simulator\n",
+    "simulator = ARIMASimulator(n_samples=5000)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 129,
+   "id": "2b35d017-199e-4b6d-b3e2-1da1a6133af2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Generate data for different situations\n",
+    "df_d0 = simulator.generate_arima_data(d=0, drift=0.2)\n",
+    "df_d1 = simulator.generate_arima_data(d=1, drift=0.2)\n",
+    "df_d2 = simulator.generate_arima_data(d=2, drift=0.2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "97fe223a-7ddf-473d-9503-403c20e7e783",
    "metadata": {},
    "source": [
@@ -735,12 +786,39 @@
    "id": "5fe4c2f6-2ad6-4024-b6a9-850feeb28bc5",
    "metadata": {},
    "source": [
-    "Fine the d value based on ADF Test."
+    "Fine the d value based on ADF Test. It works fine as we are able to see the d value for reference."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 130,
+   "id": "3de78804-1ff8-47e7-b6c5-3ef562c98a2d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "--- Time Series Split ---\n",
+      "Training Set:   3500 points (2020-01-01 to 2029-07-31)\n",
+      "Validation Set: 750 points (2029-08-01 to 2031-08-20)\n",
+      "Test Set:       750 points (2031-08-21 to 2033-09-08)\n",
+      "Get ready for the ARIMA Forecast\n",
+      "\n",
+      "--- Finding Optimal 'd' Parameter ---\n",
+      "Testing with d = 0...\n",
+      "  ADF p-value: 0.0000\n",
+      "  Result: Series is stationary. Optimal d = 0\n"
+     ]
+    }
+   ],
+   "source": [
+    "time_series_forecastor = TimeSeriesForcastor(df_d0, date_column = 'date', value_column = 'value')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 131,
    "id": "4e95bebc-688b-4ed4-8793-c0a95b2cedde",
    "metadata": {},
    "outputs": [
@@ -748,10 +826,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "--- Time Series Split ---\n",
+      "Training Set:   3500 points (2020-01-01 to 2029-07-31)\n",
+      "Validation Set: 750 points (2029-08-01 to 2031-08-20)\n",
+      "Test Set:       750 points (2031-08-21 to 2033-09-08)\n",
+      "Get ready for the ARIMA Forecast\n",
       "\n",
       "--- Finding Optimal 'd' Parameter ---\n",
       "Testing with d = 0...\n",
-      "  ADF p-value: 0.7616\n",
+      "  ADF p-value: 0.8402\n",
       "  Result: Series is non-stationary. Differencing...\n",
       "Testing with d = 1...\n",
       "  ADF p-value: 0.0000\n",
@@ -760,13 +843,46 @@
     }
    ],
    "source": [
-    "d, diff_ts = time_series_forecastor.find_d_parameter()"
+    "time_series_forecastor = TimeSeriesForcastor(df_d1, date_column = 'date', value_column = 'value')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 132,
+   "id": "3ba758c2-75b8-4dcf-b373-a85685cd48b7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "--- Time Series Split ---\n",
+      "Training Set:   3500 points (2020-01-01 to 2029-07-31)\n",
+      "Validation Set: 750 points (2029-08-01 to 2031-08-20)\n",
+      "Test Set:       750 points (2031-08-21 to 2033-09-08)\n",
+      "Get ready for the ARIMA Forecast\n",
+      "\n",
+      "--- Finding Optimal 'd' Parameter ---\n",
+      "Testing with d = 0...\n",
+      "  ADF p-value: 0.0691\n",
+      "  Result: Series is non-stationary. Differencing...\n",
+      "Testing with d = 1...\n",
+      "  ADF p-value: 0.9849\n",
+      "  Result: Series is non-stationary. Differencing...\n",
+      "Testing with d = 2...\n",
+      "  ADF p-value: 0.0000\n",
+      "  Result: Series is stationary. Optimal d = 2\n"
+     ]
+    }
+   ],
+   "source": [
+    "time_series_forecastor = TimeSeriesForcastor(df_d2, date_column = 'date', value_column = 'value')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3ba758c2-75b8-4dcf-b373-a85685cd48b7",
+   "id": "8a5f9da8-6eaa-4120-b898-65a4f1207218",
    "metadata": {},
    "outputs": [],
    "source": []
